--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>2.6.4</version>
 		</dependency>
+		
+<dependency>
+  <groupId>org.springframework.security</groupId>
+  <artifactId>spring-security-crypto</artifactId>
+  <version>5.6.1</version>
+</dependency>
+
 
 <dependency>
   <groupId>jakarta.persistence</groupId>
