--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,23 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+    <groupId>com.paypal.sdk</groupId>
+    <artifactId>rest-api-sdk</artifactId>
+    <version>1.14.0</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-context-support</artifactId>
+    <version>5.2.8.RELEASE</version>
+</dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-mail</artifactId>
+    <version>2.5.6</version>
+</dependency>
+
   <!-- Dependencia de Spring Boot para MySQL -->
  	<dependency>
 			<groupId>org.springframework.boot</groupId>
