--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,15 @@
 	</properties>
 	<dependencies>
 		
-		<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-drive -->
+<dependency>
+    <groupId>com.google.api-client</groupId>
+    <artifactId>google-api-client</artifactId>
+    <version>1.31.0</version>
+</dependency>
 <dependency>
     <groupId>com.google.apis</groupId>
     <artifactId>google-api-services-drive</artifactId>
-    <version>v3-rev197-1.25.0</version>
+    <version>v3-rev305-1.25.0</version>
 </dependency>
 
 <!-- https://mvnrepository.com/artifact/com.google.auth/google-auth-library-oauth2-http -->
